form now has functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
 
-<form action="">
+<form action="map.php" id="form_id" method="post">
+  <input type="hidden" id="question_0" name="question_0" value="-1">
+  <input type="hidden" id="question_1" name="question_1" value="-1">
+  <input type="hidden" id="question_2" name="question_2" value="-1">
+  <input type="hidden" id="question_3" name="question_3" value="-1">
+  <input type="hidden" id="question_4" name="question_4" value="-1">
+  <input type="hidden" id="question_5" name="question_5" value="-1">
+  <input type="hidden" id="question_6" name="question_6" value="-1">
+  <input type="hidden" id="question_7" name="question_7" value="-1">
+  <input type="hidden" id="question_8" name="question_8" value="-1">
+
   <div class="grid-container">
     <div class="form-header"> <span class="futura-18">Mesa, </span><span  class="georgia-18"><i>Arizona</i></span></div>
     <div class="form-left" id="form-left-0"><span id="question-count" class="futura-22-bold">1</span>
@@ -60,56 +70,6 @@
 
   </div>
 
-<!--
-<div  class="form_class" id="form_id">
-  <div class="form_left" id="form_left_id">
-    1/10<br>
-    Qual é a sua idade?
-  </div>
-
-  <div class="form-right_top" >
-       <input type="checkbox" name="checkboxG1" id="checkboxG1" class="css-checkbox" />
-       <label for="checkboxG1" class="css-label" id="label1">menos de 25 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG2" id="checkboxG2" class="css-checkbox" />
-       <label for="checkboxG2" class="css-label" id="label2">de 25 a 40 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" />
-       <label for="checkboxG3" class="css-label" id="label3">de 41 a 55 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
- </div>
- <div class="form-right" >
-       <input type="checkbox" name="checkboxG4" id="checkboxG4" class="css-checkbox" />
-       <label for="checkboxG4" class="css-label" id="label4">mais de 55 anos</label>
- </div>
-
- <div class="confirma" onclick="confirm();" >CONFIRMA >></div>
-  </div>
-
-
-</div>
--->
 
 </form>
 </body>
